@@ -35,6 +35,14 @@
 <div class="document">
 
 
+<p>2018-11-29  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>Magick++/lib/Magick++/Drawable.h: Fix use of clang diagnostic
+syntax. Addresses SourceForge bug #579 &quot;'diagnostic pop' pragma
+without 'diagnostic push' in Drawable.h.&quot;.</li>
+</ul>
+</blockquote>
 <p>2018-11-22  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
