@@ -1,3 +1,9 @@
+2018-11-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* Magick++/lib/Magick++/Drawable.h: Fix use of clang diagnostic
+	syntax. Addresses SourceForge bug #579 "'diagnostic pop' pragma
+	without 'diagnostic push' in Drawable.h.".
+
 2018-11-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* magick/constitute.c (WriteImage): Eliminate use of just-freed
